发布1.1版本: 1. 完善测试用例 2. 提取微信请求基类，不同类型的请求初始化不同的子类

--- a/mars/src/main/resources/mars-messages_zh_CN.properties
+++ b/mars/src/main/resources/mars-messages_zh_CN.properties
@@ -4,3 +4,4 @@ mars.parse.xml.fail=解析xml失败
 mars.check.wx.signature.fail=验证微信签名失败
 mars.create.wx.msg.crypt.fail=创建微信消息加解密工具失败
 mars.not.found.path=请配置:'mars.path'
+not.currently.supported.type=暂时未支持该类型的请求
